# word-muckery

./: .gitignore  Cargo.toml
src/: ascii_bit_set.rs  fivegram.rs  main.rs  words.txt
