[package]
name = "word-fuckery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = "0.12.0"
itertools = "0.10.3"
lazy_static = "1.4.0"
rayon = "1.5.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_repr = "0.1.7"
